# uns-simulator

./: .env.example  .gitignore  AURORA_MASTER_DEMO_GUIDE.md  CHANGELOG.md  Dockerfile  Dockerfile.aurora  GRAFANA_DEMO_GUIDE.md  MQTT_TOPIC_REFERENCE.md  README.md  STABILITY_RUNBOOK.md  TERMINUSDB_DESIGN.md  THREE_LAYER_DEMO_GUIDE.md  aurora_model.py  aurora_simulator.py  deploy-aurora.sh  deploy-simulator.sh  manage.sh  pyproject.toml  requirements.txt  run.sh  setup-aurora-infra.sh  simulator.py  snapshot_uns.json  snapshot_uns.txt  uns_model.py
config/: factory.yaml
ecs/: service-definition.json  task-definition-aurora.json  task-definition.json
grafana/: README.md
grafana/dashboards/: aurora-asset-telemetry.json  aurora-faults-alarms.json  aurora-mes-batch.json  aurora-nav-home.json  aurora-plant-overview.json  aurora-power-monitoring.json
scripts/: db_migrate.py  pre-demo-check.sh  reseed-scenarios.py  seed-terminusdb.js  seed-terminusdb.py
src/: main.py
src/assets/: base.py  conveyor.py  inspection.py  oven.py  press.py  robot.py  sprayer.py
src/factory/: orchestrator.py
static/: aurora.html  index.html
uns-studio/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
uns-studio/src/: App.jsx  index.css
uns-studio/src/components/auth/: LoginPage.jsx
uns-studio/src/components/feed/: LiveFeed.jsx
uns-studio/src/components/layout/: Layout.jsx  Sidebar.jsx  TopBar.jsx
uns-studio/src/services/: api.js  pipeline-api.js
uns-studio/src/store/: auth.store.js  sim.store.js
(+8 files in other folders)
